# notation

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: .markdownlint.jsonc  book.toml
docs/src/: SUMMARY.md  intro.md  keybinds.md
src/: cat_printer.rs  fonts.rs  main.rs
