[package]
name = "notation"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["formatting", "local-offset", "serde"] }
